[package]
name = "fs-test"
version = "0.1.0"
authors = [ "mats@embeinnovation.com" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fs_test"

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
serde_json ="1.0"
wasmbus-rpc = "0.8"
wasmcloud-interface-httpserver = "0.5"
wasmcloud-interface-blobstore = {path = "../interfaces/blobstore/rust"}
wasmcloud-interface-logging = "0.5"


[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
